...
            android:text="      Vinilos"
            android:textColor="#fff"
            android:textSize="26sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:elevation="6dp"
        android:gravity="left"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vinilos"
            android:textColor="#fff"
            android:textSize="31sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription='Fondo aplicación'
        app:layout_constraintTop_toTopOf="parent" />
<!--Menu-->
    <LinearLayout
        android:id="@+id/menu"
        android:elevation="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton

                    android:id="@+id/imgButtoncoleccionista"
                    android:layout_width="140dp"
                    android:layout_height="183dp"
                    android:src="@drawable/coleccionista"
                    android:contentDescription='Enlace a los Coleccionistas'></ImageButton>
                <Button
                    android:id="@+id/btnColeccionistas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coleccionista"
                    android:textSize="10sp"
                    android:layout_marginTop="138dp"
                    android:textColor="#ffffff"
...
