<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="coleccionista" type="com.example.vinilosapp_g18.models.Coleccionista"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#eeeeee"
            android:layout_marginTop="0dp"
            app:strokeWidth="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_height="140dp"
                android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:background="@drawable/mar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.923"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription='Portada'></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:layout_marginTop="115dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="25dp"
                        android:textStyle="bold"
                        android:text="COLECCIONISTA"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:text="NOMBRE:" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:layout_marginEnd="25dp"
                        android:textSize="15sp"
                        android:layout_marginStart="95dp"
                        android:text="@{coleccionista.name}" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:text="TELEFONO:" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="109dp"
                        android:layout_marginEnd="25dp"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:text="@{coleccionista.telephone}" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:text="EMAIL:" />
                    <TextView
                        android:id="@+id/text_releaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="80dp"
                        android:layout_marginEnd="25dp"
                        android:text="@{coleccionista.email}" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="ALBUM:" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"

                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/collector_albumes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:text="@{coleccionista.collectorAlbums}"/>

                        </LinearLayout>
                        <androidx.cardview.widget.CardView
                            android:layout_width="79dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="0dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="15dp">
                            <ImageView
                                android:id="@+id/image_collector_album"
                                android:layout_width="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_height="match_parent"
                                android:layout_marginTop="0dp"
                                android:scaleType="fitXY"
                                app:imageDetail="@{coleccionista.imagecollectorAlbums}"
                                android:contentDescription='@{coleccionista.collectorAlbums}'></ImageView>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="ARTISTA FAVORITO:" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/favorite_performers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:text="@{coleccionista.favoritePerformers}"/>
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="79dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="20dp"
                            android:layout_gravity="center_vertical"
                            app:cardElevation="0dp">
                            <ImageView
                                android:id="@+id/image_favorite_performers"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="0dp"
                                android:layout_gravity="center_vertical"
                                android:scaleType="fitXY"
                                android:contentDescription='@{coleccionista.favoritePerformers}'
                                app:imageDetail="@{coleccionista.imagefavoritePerformers}"></ImageView>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginStart="25dp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="COMENTARIOS REALIZADOS:" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/text_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:text="@{coleccionista.comments}"/>
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>