...
        android:textAlignment="center"
        ></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/album_detail_item"
            android:layout_marginBottom="60dp">

        </androidx.recyclerview.widget.RecyclerView>
...
